# wordlebot

./: bot.py  flake.nix  pyproject.toml  wordle.py
src/wordlebot/: __main__.py  wordle.py
