[project]
name = "wordlebot"
version = "0.1.1"
description = ""
authors = [{ name = "Ilia Novoselov", email = "ilya.novoselov@gmail.com" }]
requires-python = "~=3.13"
dependencies = [
    "irc>=20.5.0,<21",
    "irccodes>=1.2.0,<2",
]

[project.scripts]
wordlebot = "wordlebot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
